# docker_c

./: .gitignore  .gitmodules  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: github-actions-demo.yml
archive_lib/: Makefile  file1.c  file2.c
c/advanced/: aligned_attribute.c  archives.c  argc_argv.c  assert.c  dynamic_loading_unloading.c  env_variables.c  error_handling.c  error_no.c  func_pointer.c  func_pointer_1.c  get_opt.c  handling_abnormal_cond.c  mkstemp.c  packed_attribute.c  pragma.c  preprocessors.c  rem_repeated_char.c  shared_lib.c  stdout_vs_stderr.c  stringizing_op.c  variable_args.c
c/algos/: binary_search.c  bubble_sort.c  merge_sort.c  selection_sort.c
c/data_structures/: linked_list.c  stack.c
c/embedded/: bin_to_dec.c  circular_buffer.c  copy_src_dest.c  dec_to_bin.c  dec_to_hex.c  endianess_check.c  set_clear_toggle.c  struct_register.c  swap_bits.c  swap_bytes.c
c/examples/: factorial.c  fibbonaci.c  find_subsequence.c  matrix_mul.c  max_value_array.c  palindrome_chk.c  pyramid  pyramid.c  reverse_string.c  swap_nums.c
c/gdb_cmd_tutorial/: 0_GDB_Cheatsheet.md  gdb_example.c
c/helloworld/: helloworld.ipynb
c/ipc/: 0_10_popen_pclose.c  0_11_fifo_create.c  0_12_fifo_write.c  0_13_fifo_read.c  0_14_local_sockets_server.c  0_15_local_sockets_client.c  0_16_internet_socks.c  0_17_socketpair.c  0_18_spinlocks.c  0_1_sharedmem.c  0_2_sharedmem2.c  0_3_bin_semaphore.c  0_4_shdmem_and_semphr.c  0_5_mapped_mem_write.c  0_6_mapped_mem_read.c  0_7_mapped_mem2.c  0_8_pipes.c  0_9_dup2.c  volansys_ex1.c  volansys_ex2.c  volansys_ex3.c  volansys_ex3_5.c  volansys_ex3_6.c  volansys_ex4_client.c  volansys_ex4_server.c  volansys_ex51_client.c  volansys_ex51_server.c  volansys_ex5_client.c  volansys_ex5_server.c  volansys_ex6_architecture.md  volansys_ex6_server.c
c/linux/: 0_API_REFERENCE.md  11_exit.c  3_signal_receiving.c  9_exec_shell.c  fork_ex.c  get_pid.c
c/linux_sys_calls/: 0_REVIEW.md  1_mkdir.c  2_getpid.c  volansys_assignment.c
c/make_tutorial/: Makefile
c/ncurses/: helloworld_curses.c
c/playground/: test_lg.c  test_yamaha.c
c/processes_signals/: 0_0_API_REFERENCE.md  0_10_sigchld_signal.c  0_5_system_func.c  0_6_fork_exec.c  0_7_nice.c  0_8_sigaction.c  0_9_zombie_ex.c  0_API_REFERENCE.md  10_alarm.c  12_posix_sig.c  1_pid_gid.c  2_parent_child_process.c  4_signal_creation.c  5_wait_macros.c  6_sigtest.c  7_raise_api.c  8_exec_api.c  file_size_stat.c  volansys_exercise1.c
c/socket/: 0_10_datagram_client.c  0_11_blocking_nblocking.c  0_12_select.c  0_13_select_in_depth.c  0_14_partial_sends.c  0_15_data_serialization_float.c  0_16_packing_unpacking.c  0_17_data_encapsulation_server.c  0_18_data_encapsulation_client.c  0_19_broadcaster.c  0_1_socket_struct.c  0_2_ipv4_to_ipv6.c  0_3_5_showip.c  0_3_getaddrinfo.c  0_4_socket_passing.c  0_5_socket_process.c  0_6_gethostname.c  0_7_server_demo.c  0_8_client_demo.c  0_9_datagram_server.c  check_valid_ip.c  get_mac.c  ip_get_set.c  references.txt  (+2 more)
ceedling/: ceedling_tutorial.ipynb
cmake_volansys/: README.md
cmake_volansys/volansys_ex1/: CMakeLists.txt
cmake_volansys/volansys_ex1/inc/: hello.h
cmake_volansys/volansys_ex1/src/: hello.c
cmake_volansys/volansys_ex2/: CMakeLists.txt
cmake_volansys/volansys_ex2/example/: CMakeLists.txt  example.c  example.h
cmake_volansys/volansys_ex2/src/: hello.c
cmake_volansys/volansys_ex3/: CMakeLists.txt
cmake_volansys/volansys_ex3/example_1/: hello.c  hello.h
cmake_volansys/volansys_ex3/example_2/: hello.cpp  hello.hpp
freertos/: .gitignore  FreeRTOS-Sim  Makefile  README.md
g_test/: CMakeLists.txt  README.md  factorial.c  factorial.h  hello_test.cc
gtest/: CMakeLists.txt
include/: mathfuncs.h  pack_unpack.h
make_tutorial/: main.c
mcuboot/: MCU_Boot_tutorial.ipynb
nanopb/: hello.proto
sample_debugger/: CMakeLists.txt  FreeRTOSConfig.h  app_logging.c  app_logging.h  debug_logging.c  debug_logging.h  main.c
sample_debugger/logger/: log.c  log.h  log_circular_buffer.h  log_config.h  log_to_console.c  log_to_console.h  log_to_ringbuffer.c  log_to_ringbuffer.h  logger_config.h
shared_lib/: Makefile  file1.c  libmylib.so.1  mathfuncs.c  pack2.c  pack_unpack.c  socket_lib.c
tinycrypt/: .gitignore  README.md  config.mk  test_aes.c
tlfs/: CMakeLists.txt
tlfs/example/: main.c
(+256 files in other folders)
